[project]
name = "solana-retirement-portfolio-builder"
version = "0.1.0"
description = "A comprehensive Flask-based retirement portfolio builder for Solana ecosystem tokens featuring live pricing, multi-API fallbacks, advanced rebalancing, stress testing, backtesting capabilities, and accessibility-enhanced UI with theme support."
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
]
